--- a/local/guttering-adwick.html
+++ b/local/guttering-adwick.html
@@ -1,1 +1,396 @@
+<!DOCTYPE html>
+<html lang="en-GB">
+<head>
 
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta name="robots" content="index, follow">
+<title></title>
+<link rel="icon" href="/favicon.png" type="image/png">
+<link rel="canonical" href="https://homerepairs4u.com/guttering-services/campsall.html">
+<meta name="description" content="">
+<link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
+<style>
+h1 {
+font-size: 2em; /* adjusts size for readability */
+text-align: center;
+margin-bottom: 20px;
+} 
+/* HEADER STYLING */
+header{
+text-align:center;
+padding:25px 10px;
+background:#fff;
+border-bottom:4px solid #27ae60;
+}
+
+.logo{
+max-height:90px;
+width:auto;
+}
+
+/* CALL BUTTON */
+.call-btn{
+display:inline-block;
+margin-top:18px;
+padding:14px 28px;
+background:#000;
+color:#fff;
+font-size:19px;
+text-decoration:none;
+font-weight:bold;
+border-radius:6px;
+border:2px solid #000;
+}
+.call-btn:hover{
+background:#333;
+color:#fff;
+}
+
+/* FOOTER */
+.site-footer{
+background:#000;
+color:#fff;
+text-align:center;
+padding:25px 15px;
+margin-top:40px;
+font-size:14px;
+}
+
+.footer-services{
+background-color: black;
+padding: 20px;
+text-align: center;
+margin-top: 15px;
+}
+
+.footer-services a{
+color: white;
+margin: 0 10px;
+}
+ /* LIGHTBOX STYLING */
+.lightbox {
+display: none; /* Hidden by default */
+position: fixed; /* Stay in place */
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(0, 0, 0, 0.8); /* Semi-transparent black overlay */
+justify-content: center; /* Center the image horizontally */
+align-items: center; /* Center the image vertically */
+z-index: 9999; /* On top of everything */
+cursor: pointer; /* Click to close */
+flex-direction: column; /* For image + close button vertically */
+}
+
+.lightbox img {
+max-width: 90%;
+max-height: 90%;
+box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+.lightbox span {
+position: absolute;
+top: 20px;
+right: 30px;
+color: white;
+font-size: 40px;
+font-weight: bold;
+cursor: pointer;
+user-select: none;
+}
+.header-buttons {
+display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+.main-nav {
+background: #000;
+border-bottom: 3px solid #27ae60;
+font-family: sans-serif;
+}
+
+.main-nav ul {
+list-style: none;
+margin: 0;
+padding: 0;
+}
+
+.menu {
+display: flex;
+justify-content: center;
+}
+
+.menu > li {
+position: relative;
+}
+
+.menu a {
+display: block;
+padding: 14px 22px;
+color: #fff;
+text-decoration: none;
+font-weight: 600;
+}
+
+.menu a:hover {
+background: #333;
+}
+
+/* DROPDOWN */
+.submenu {
+display: none;
+position: absolute;
+top: 100%;
+left: 0;
+background: #000;
+min-width: 200px;
+z-index: 1000;
+}
+
+.has-submenu:hover .submenu {
+display: block;
+}
+
+.submenu a {
+padding: 12px 18px;
+color: #fff;
+}
+
+/* MOBILE */
+@media (max-width: 768px) {
+.menu {
+flex-direction: column;
+}
+
+.submenu {
+position: static;
+display: none; /* hidden by default */
+}
+
+.submenu-toggle::after {
+content: " ▼";
+}
+}
+
+/* MOBILE CLICK TOGGLE */
+@media (max-width: 768px) {
+.submenu-toggle {
+cursor: pointer;
+}
+}
+</style>
+ 
+<!-- ✅ HEADER -->
+<header>
+<img src="/images/home-repairs-4u-doncaster.webp"
+alt="Home Repairs 4U logo"
+class="logo"
+width="600" height="200"
+loading="eager">
+
+<div style="text-align:center; margin-top:10px;">
+<a href="https://steely1968.github.io/"
+style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
+</div>
+
+<br>
+
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+<a href="https://homerepairs4u.com/quote-calculator/guttering.html" class="call-btn" aria-label="Get a Quote for Guttering Services">📝 Get Instant Quote</a>
+</header>
+<nav class="main-nav" aria-label="Main navigation">
+<ul class="menu">
+<li class="has-submenu">
+<a href="#" class="submenu-toggle">Services</a>
+<ul class="submenu">
+<li><a href="/local/pressure-washing-???????????????????????.html">Pressure Washing</a></li>
+<li><a href="/guttering-services/?????????????????????.html">Guttering Services</a></li>
+<li><a href="/contact.html">Contact</a></li>
+</ul>
+</li>
+</ul>
+</nav>
+
+ <!-- ✅ MAIN CONTENT -->
+<main style="max-width:1200px; margin:30px auto; padding:0 15px;">
+
+<!-- Section 1 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h1></h1>
+<h2></h2>
+<p></p>
+<p></p>
+<p></p>
+
+<img src="/images/gutter-clearing.webp"
+alt=""
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 2 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2></h2>
+<h3></h3>
+<p></p>
+<p></p>
+<p></p>
+
+<img src="/images/cleaned-gutters-before-after.webp"
+alt=""
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 3 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2></h2>
+<h3></h3>
+<p></p>
+<p></p>
+<p></p>
+<img src="/images/gutter-repairs.webp"
+alt=""
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 4 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2></h2>
+<h3></h3>
+<p></p>
+<p></p>
+<p></p>
+<img src="/images/gutter-alignment.webp"
+alt=""
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- Section 5 -->
+<section style="margin-bottom:40px; text-align:center;">
+<h2></h2>
+<p>
+We offer quotes for all our exterior cleaning services, including pressure washing, patio cleaning, and gutter maintenance.
+To get a quote specifically for pressure washing in ????????????????, visit our
+<a href="https://homerepairs4u.com/local/pressure-washing-??????????????.html" title="Professional Pressure Washing  Services in ???????????">Campsall Pressure Cleaning Service page</a>.
+</p>
+<div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
+<button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
+<img id="lightboxImg" src="" alt="">
+</div>
+<img src="/images/gutter-cleaning.webp"
+alt=""
+style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
+onclick="openLightbox(this.src, this.alt)"
+tabindex="0"
+onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
+</section>
+
+<!-- ✅ BOTTOM CALL BUTTON -->
+<div style="text-align:center; margin:40px 0;">
+<a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
+</div>
+
+</main>
+
+<!-- ✅ FOOTER -->
+<footer class="site-footer">
+© Home Repairs 4U | Askern DN6 | Call 07735 873694
+
+
+</footer>
+ 
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/guttering-services/??????????????????????????????.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
+},
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.5352,???????????????????????
+"longitude": -1.0522?????????????????????
+},
+"areaServed": "????????????????????????????????????",
+"openingHoursSpecification": [
+{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+],
+"opens": "00:00",
+"closes": "23:59"
+}
+],
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
+]
+}
+</script>
+
+<!-- ✅ LIGHTBOX SCRIPT -->
+<script>
+function openLightbox(src, alt){
+const lightbox = document.getElementById("lightbox");
+const lightboxImg = document.getElementById("lightboxImg");
+
+lightbox.style.display = "flex"; // show lightbox
+lightboxImg.src = src; // set the image
+lightboxImg.alt = alt; // ✅ set alt dynamically
+}
+
+function closeLightbox(){
+document.getElementById("lightbox").style.display = "none";
+}
+
+// Optional: close lightbox with Esc key
+document.addEventListener('keydown', function(event) {
+const lightbox = document.getElementById('lightbox');
+if (event.key === "Escape" && lightbox.style.display === "flex") {
+lightbox.style.display = "none";
+}
+});
+</script>
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+const toggles = document.querySelectorAll('.submenu-toggle');
+toggles.forEach(function(toggle) {
+toggle.addEventListener('click', function(e) {
+e.preventDefault();
+const submenu = this.nextElementSibling;
+if(submenu.style.display === 'block') {
+submenu.style.display = 'none';
+} else {
+submenu.style.display = 'block';
+}
+});
+});
+});
+</script>
+</body>
+</html>
