--- a/local/guttering-adwick.html
+++ b/local/guttering-adwick.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title></title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/guttering-services/campsall.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/guttering-?????????????.html">
 <meta name="description" content="">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
@@ -208,7 +208,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="#" class="submenu-toggle">Services</a>
 <ul class="submenu">
 <li><a href="/local/pressure-washing-???????????????????????.html">Pressure Washing</a></li>
-<li><a href="/guttering-services/?????????????????????.html">Guttering Services</a></li>
+<li><a href="/local/guttering-?????????????????????.html">Guttering Services</a></li>
 <li><a href="/contact.html">Contact</a></li>
 </ul>
 </li>
@@ -320,7 +320,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/guttering-services/??????????????????????????????.html",
+"url": "https://homerepairs4u.com/local/guttering-??????????????????????????????.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
