--- a/local/pressure-washing-adwick.html
+++ b/local/pressure-washing-adwick.html
@@ -210,7 +210,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <a href="#" class="submenu-toggle">Services ▼</a>
 <ul class="submenu">
 <li><a href="/local/pressure-washing-adwick.html">Pressure Washing</a></li>
-<li><a href="/guttering-services/adwick.html">Guttering Services</a></li>
+<li><a href="/local/guttering-adwick.html">Guttering Services</a></li>
 <li><a href="/contact.html">Contact</a></li>
 </ul>
 </li>
