--- a/local/guttering-sprotbrough.html
+++ b/local/guttering-sprotbrough.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="robots" content="index, follow">
-<meta name="title" content="Guttering Services in Sprotbrough Doncaster (Instant online quote)">
+<title>Guttering Services in Sprotbrough Doncaster (Instant online quote)</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/guttering-sprotbrough.html">
 <meta name="description" content="Reliable guttering services in Sprotbrough Doncaster. Gutter clearing, repairs, and replacement by trusted local experts. Get your instant online quote today.">
