--- a/local/guttering-armthorpe.html
+++ b/local/guttering-armthorpe.html
@@ -317,39 +317,39 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 
 <script type="application/ld+json">
 {
-@context: "https://schema.org",
-@type: "LocalBusiness",
-name: "Home Repairs 4U",
-image: "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-url: "https://homerepairs4u.com/local/guttering-armthorpe.html",
-telephone: "+44-07735-873694",
-priceRange: "££",
-address: {
-@type: "PostalAddress",
-streetAddress: "35 Airstone Road",
-addressLocality: "Askern",
-addressRegion: "Doncaster",
-postalCode: "DN6 0QA",
-addressCountry: "GB"
+"@context": "https://schema.org",
+"@type": "LocalBusiness",
+"name": "Home Repairs 4U",
+"image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
+"url": "https://homerepairs4u.com/local/guttering-campsall.html",
+"telephone": "+44-07735-873694",
+"priceRange": "££",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "GB"
 },
-geo: {
-@type: "GeoCoordinates",
-latitude: 53.5352,
-longitude: -1.0522
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.5352,
+"longitude": -1.0522
 },
-areaServed: "Armthorpe",
-openingHoursSpecification: [
+"areaServed": "Armthorpe",
+"openingHoursSpecification": [
 {
-@type: "OpeningHoursSpecification",
-dayOfWeek: [
-Monday,"Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": [
+"Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday"
 ],
-opens: "00:00",
-closes: "23:59"
+"opens": "00:00",
+"closes": "23:59"
 }
 ],
-sameAs: [
-https://www.facebook.com/profile.php?id=61584395621256
+"sameAs": [
+"https://www.facebook.com/profile.php?id=61584395621256"
 ]
 }
 </script>
