Update and rename doncaster.html to index.html

--- a/guttering-services/index.html
+++ b/guttering-services/index.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title>Guttering Services in Doncaster | Instant Online Quote</title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/guttering-services/doncaster.html">
+<link rel="canonical" href="https://homerepairs4u.com/guttering-services/index.html">
 <meta name="description" content="Expert guttering services in Doncaster including gutter clearing, repairs, and replacement. Trusted local team. Get your instant online quote today.">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
@@ -348,7 +348,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/guttering-services/doncaster.html",
+"url": "https://homerepairs4u.com/guttering-services/index.html.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
