--- a/local/ivy-removal-doncaster.html
+++ b/local/ivy-removal-doncaster.html
@@ -8,7 +8,7 @@
 <meta name="robots" content="index, follow">
 <title></title>
 <link rel="icon" href="/favicon.png" type="image/png">
-<link rel="canonical" href="https://homerepairs4u.com/local/guttering-?????????????.html">
+<link rel="canonical" href="https://homerepairs4u.com/local/ivy-removal-doncaster.html">
 <meta name="description" content="">
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
@@ -200,15 +200,15 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <br>
 
 <a href="tel:07735873694" class="call-btn" aria-label="Call Home Repairs 4U on 07735 873694">📞 Call Now: 07735 873694</a>
-<a href="https://homerepairs4u.com/quote-calculator/guttering.html" class="call-btn" aria-label="Get a Quote for Guttering Services">📝 Get Instant Quote</a>
 </header>
 <nav class="main-nav" aria-label="Main navigation">
 <ul class="menu">
 <li class="has-submenu">
 <a href="#" class="submenu-toggle">Services</a>
 <ul class="submenu">
-<li><a href="/local/pressure-washing-???????????????????????.html">Pressure Washing</a></li>
-<li><a href="/local/guttering-?????????????????????.html">Guttering Services</a></li>
+<li><a href="/local/pressure-washing-doncaster.html">Pressure-washing</a></li>
+<li><a href="/local/guttering-doncaster.html">Guttering Services</a></li>
+<li><a href="/local/ivy-removal-doncaster.html">Guttering Services</a></li>
 <li><a href="/contact.html">Contact</a></li>
 </ul>
 </li>
@@ -283,11 +283,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <!-- Section 5 -->
 <section style="margin-bottom:40px; text-align:center;">
 <h2></h2>
-<p>
-We offer quotes for all our exterior cleaning services, including pressure washing, patio cleaning, and gutter maintenance.
-To get a quote specifically for pressure washing in ????????????????, visit our
-<a href="https://homerepairs4u.com/local/pressure-washing-??????????????.html" title="Professional Pressure Washing  Services in ???????????">Campsall Pressure Cleaning Service page</a>.
-</p>
+
 <div class="lightbox" id="lightbox" role="dialog" aria-modal="true" aria-labelledby="lightboxImg">
 <button class="lightbox-close" onclick="closeLightbox()" aria-label="Close lightbox">×</button>
 <img id="lightboxImg" src="" alt="">
@@ -320,7 +316,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 "@type": "LocalBusiness",
 "name": "Home Repairs 4U",
 "image": "https://homerepairs4u.com/images/home-repairs-4u-doncaster.webp",
-"url": "https://homerepairs4u.com/local/guttering-??????????????????????????????.html",
+"url": "https://homerepairs4u.com/local/ivy-removal-doncaster.html",
 "telephone": "+44-07735-873694",
 "priceRange": "££",
 "address": {
@@ -333,10 +329,10 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 },
 "geo": {
 "@type": "GeoCoordinates",
-"latitude": 53.5352,???????????????????????
-"longitude": -1.0522?????????????????????
+"latitude": 53.5227,
+"longitude": -1.1324
 },
-"areaServed": "????????????????????????????????????",
+"areaServed": "Doncaster",
 "openingHoursSpecification": [
 {
 "@type": "OpeningHoursSpecification",
